--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Race Results</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Race Results</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore sequi est perspiciatis id quia! Hic, atque, nemo, laborum dolorum distinctio rem dicta ratione consequatur voluptatem natus accusamus at placeat? Delectus!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vero quam rerum voluptatibus voluptatum, beatae itaque in accusamus id et ipsum possimus recusandae. Commodi cumque reiciendis dignissimos ipsam illum possimus.</p>
 </body>
 </html>
