--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <h1>Race Results</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore sequi est perspiciatis id quia! Hic, atque, nemo, laborum dolorum distinctio rem dicta ratione consequatur voluptatem natus accusamus at placeat? Delectus!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vero quam rerum voluptatibus voluptatum, beatae itaque in accusamus id et ipsum possimus recusandae. Commodi cumque reiciendis dignissimos ipsam illum possimus.</p>
+    <div id="results">
+        <table id="resultsTable">
+            <tr>
+                <thead>Rank</thead>
+                <thead>Country</thead>
+                <thead>Name</thead>
+                <thead>Time</thead>
+            </tr>
+        </table>
+    </div>
+
+
 </body>
 </html>
